--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -1,3 +1,11 @@
 $primary: #e91e63;
-$text-primary: #FCE4EC;
-$sec-bg: #EC407A;
+$text-primary: #fffbfc;
+$sec-bg: #880E4F;
+$card: #D81B60;
+$card-hover: #a3194c;
+$white-bg : #FCE4EC;
+$card2: #ffffff;
+$whatsapp: rgb(33, 182, 0);
+$instagram: rgb(182, 0, 52);
+
+
