--- a/src/components/MenuBar.scss
+++ b/src/components/MenuBar.scss
@@ -1,20 +1,30 @@
 @import '../Styles.scss';
 .menu-bar{
     width: 100%;
-    height: 60px;
+    height: 80px;
     background-color:  $primary;
     display: grid;
     grid-template-columns: 70% 30%;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.42);
     .nav-links{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
         text-decoration: none;
         background-color:  $primary;
         .link{
             text-decoration: none;
             color: $text-primary;
             font-weight: 600;
+            padding: 12px ;
+            border-radius: 4px;
+        }
+        .link:hover{
+            background-color: $sec-bg;
         }
     }
     div{
@@ -22,16 +32,17 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         color: $text-primary;
-        h3:nth-child(1){
+        span{
             display: flex;
             column-gap: 10px;
             align-items: center;
-            padding: 0 25px;
+            padding: 0 15px;
+            font-size: 18px;
             span{
-                align-items: center;
+                font-size: 25px;
             }
         }
-        h3:nth-child(2){
+        h1{
             display: none;
         }
     }
@@ -39,7 +50,7 @@
 @media screen and (max-width:800px) {
     .menu-bar{
         width: 100%;
-        height: 70px;
+        height: 40px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -47,7 +58,7 @@
             display: flex;
             flex-direction: column;
             position: absolute;
-            top: 69px;
+            top: 39px;
             left: -100%;
             width: 100%;
             align-items: center;
@@ -55,14 +66,14 @@
             transition: left 0.5s ease-in-out;
             z-index: 99;
             padding: 15px 0;
-            background-color:  $sec-bg;
+            background-color:  $primary;
         }
         .show{
             display: flex;
             flex-direction: column;
             position: absolute;
             left: 0;
-            top: 69px;
+            top: 39px;
             width: 100%;
             align-items: center;
             row-gap: 20px;
@@ -75,7 +86,7 @@
             display: grid;
             grid-template-columns: 11fr 1fr;
             width: 100%;
-            h3:nth-child(2){
+            h1{
                 display: flex;
                 justify-content: flex-end;
                 margin-right: 0.4em;
