--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  font-family: 'Roboto Condensed', sans-serif;
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+  width: 0.5em;
+  background-color: rgba(240, 240, 240, 0.669);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(169, 169, 169, 0.669);
+  border-radius: 10px;
+
 }
